Fixing scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @layer base{
     html{
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        background: transparent;
     }
 }
 
@@ -12,19 +13,15 @@
     .scrollbar::-webkit-scrollbar {
       width: 10px;
       height: 10px;
-      background: transparent;
-    }
-  
-    .scrollbar::-webkit-scrollbar-track {
-      background: #eab308;
+      background-color: #2e2e2e;
     }
   
     .scrollbar::-webkit-scrollbar-thumb {
-      background: #911918;
-      border: 1px solid #eab308;
+      background: #b91c1c;
+      border-radius: 10px;
     }
   
     .scrollbar::-webkit-scrollbar-thumb:hover {
-      background: #911918;
+      background: #cf2929;
     }
   }
